--- a/src/scss/_customized-bootstrap-variables.scss
+++ b/src/scss/_customized-bootstrap-variables.scss
@@ -344,8 +344,8 @@
     ); $cyans: $cyans !global;
     */
 
-    // $primary: $blue; $primary: $primary !global; // $blue
-    // $secondary: $gray-600; $secondary: $secondary !global; // $gray-600
+    $primary: #0079c9; $primary: $primary !global; // $blue
+    $secondary: $gray-700; $secondary: $secondary !global; // $gray-600
     // $success: $green; $success: $success !global; // $green
     // $info: $cyan; $info: $info !global; // $cyan
     // $warning: $yellow; $warning: $warning !global; // $yellow
@@ -1104,9 +1104,9 @@
     // $navbar-dark-toggler-icon-bg: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'><path stroke='#{$navbar-dark-color}' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/></svg>"); $navbar-dark-toggler-icon-bg: $navbar-dark-toggler-icon-bg !global; // url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'><path stroke='#{$navbar-dark-color}' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/></svg>")
     // $navbar-dark-toggler-border-color: rgba($white, .1); $navbar-dark-toggler-border-color: $navbar-dark-toggler-border-color !global; // rgba($white, .1)
 
-    $navbar-light-color: #4f565c; $navbar-light-color: $navbar-light-color !global; // rgba($black, .55)
-    $navbar-light-hover-color: black; $navbar-light-hover-color: $navbar-light-hover-color !global; // rgba($black, .7)
-    $navbar-light-active-color: black; $navbar-light-active-color: $navbar-light-active-color !global; // rgba($black, .9)
+    $navbar-light-color: $secondary; $navbar-light-color: $navbar-light-color !global; // rgba($black, .55)
+    $navbar-light-hover-color: $black; $navbar-light-hover-color: $navbar-light-hover-color !global; // rgba($black, .7)
+    $navbar-light-active-color: $black; $navbar-light-active-color: $navbar-light-active-color !global; // rgba($black, .9)
     // $navbar-light-disabled-color: rgba($black, .3); $navbar-light-disabled-color: $navbar-light-disabled-color !global; // rgba($black, .3)
     // $navbar-light-toggler-icon-bg: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'><path stroke='#{$navbar-light-color}' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/></svg>"); $navbar-light-toggler-icon-bg: $navbar-light-toggler-icon-bg !global; // url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'><path stroke='#{$navbar-light-color}' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/></svg>")
     // $navbar-light-toggler-border-color: rgba($black, .1); $navbar-light-toggler-border-color: $navbar-light-toggler-border-color !global; // rgba($black, .1)
